--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
       property="og:site_name"
       content="Projekt Thonet: Cyfrowe Dziedzictwo"
     />
-    <meta property="og:url" content="https://inter-akademia.netlify.app/" />
+    <meta property="og:url" content="https://wizjoner.netlify.app/" />
     <meta
       property="og:title"
       content="Michael Thonet: Pionier Giętego Drewna | Cyfrowe Dziedzictwo"
@@ -25,10 +25,7 @@
       property="og:description"
       content="Odkryj rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego dziedzictwo i wyjątkową kolekcję Pawła Michalskiego."
     />
-    <meta
-      property="og:image"
-      content="https://inter-akademia.netlify.app/og-image.png"
-    />
+    <meta property="og:image" content="https://wizjoner.netlify.app/15.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
@@ -36,10 +33,7 @@
     <!-- Twitter Card -->
     <!-- =================================================================== -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta
-      property="twitter:url"
-      content="https://inter-akademia.netlify.app/"
-    />
+    <meta property="twitter:url" content="https://wizjoner.netlify.app/" />
     <meta name="twitter:creator" content="@AdamBabinicz" />
     <meta
       name="twitter:title"
@@ -49,10 +43,7 @@
       name="twitter:description"
       content="Odkryj rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego dziedzictwo i wyjątkową kolekcję Pawła Michalskiego."
     />
-    <meta
-      name="twitter:image"
-      content="https://inter-akademia.netlify.app/twitter-image.png"
-    />
+    <meta name="twitter:image" content="https://wizjoner.netlify.app/14.png" />
 
     <!-- =================================================================== -->
     <!-- Pozostałe zasoby (ikony, czcionki) -->
