--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,26 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Michael Thonet: Pionier Giętego Drewna | Cyfrowe Dziedzictwo</title>
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-T6JZVSL7");
+    </script>
+    <!-- End Google Tag Manager -->
     <meta
       name="description"
       content="Prześledź rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego ponadczasowe dziedzictwo i unikatową kolekcję Pawła Michalskiego."
     />
     <!-- Open Graph (Facebook, LinkedIn, Discord, etc.) -->
-    <!-- =================================================================== -->
+
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="pl_PL" />
     <meta
@@ -29,9 +43,7 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
-    <!-- =================================================================== -->
     <!-- Twitter Card -->
-    <!-- =================================================================== -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="twitter:url" content="https://wizjoner.netlify.app/" />
     <meta name="twitter:creator" content="@AdamBabinicz" />
@@ -45,9 +57,8 @@
     />
     <meta name="twitter:image" content="https://wizjoner.netlify.app/14.png" />
 
-    <!-- =================================================================== -->
     <!-- Pozostałe zasoby (ikony, czcionki) -->
-    <!-- =================================================================== -->
+
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
@@ -74,6 +85,15 @@
     />
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-T6JZVSL7"
+        height="0"
+        width="0"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
