--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Michael Thonet: Pionier Giętego Drewna | Cyfrowe Dziedzictwo</title>
+
     <!-- Google Tag Manager -->
-    <script>
+    <script defer>
       (function (w, d, s, l, i) {
         w[l] = w[l] || [];
         w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
@@ -18,12 +19,17 @@
       })(window, document, "script", "dataLayer", "GTM-T6JZVSL7");
     </script>
     <!-- End Google Tag Manager -->
+
+    <!-- Preconnect dla zasobów mapy, przyspiesza ich ładowanie -->
+    <link rel="preconnect" href="https://a.basemaps.cartocdn.com" />
+    <link rel="preconnect" href="https://b.basemaps.cartocdn.com" />
+
     <meta
       name="description"
       content="Prześledź rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego ponadczasowe dziedzictwo i unikatową kolekcję Pawła Michalskiego."
     />
-    <!-- Open Graph (Facebook, LinkedIn, Discord, etc.) -->
 
+    <!-- Open Graph (Facebook, LinkedIn, Discord, etc.) -->
     <meta property="og:type" content="website" />
     <meta property="og:locale" content="pl_PL" />
     <meta
@@ -37,7 +43,7 @@
     />
     <meta
       property="og:description"
-      content="Odkryj rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego dziedzictwo i wyjątkową kolekcję Pawła Michalskiego."
+      content="Prześledź rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego ponadczasowe dziedzictwo i unikatową kolekcję Pawła Michalskiego."
     />
     <meta property="og:image" content="https://wizjoner.netlify.app/15.png" />
     <meta property="og:image:width" content="1200" />
@@ -53,12 +59,11 @@
     />
     <meta
       name="twitter:description"
-      content="Odkryj rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego dziedzictwo i wyjątkową kolekcję Pawła Michalskiego."
+      content="Prześledź rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego ponadczasowe dziedzictwo i unikatową kolekcję Pawła Michalskiego."
     />
     <meta name="twitter:image" content="https://wizjoner.netlify.app/14.png" />
 
-    <!-- Pozostałe zasoby (ikony, czcionki) -->
-
+    <!-- Ikony i manifest -->
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png" />
@@ -76,12 +81,6 @@
       type="image/png"
       sizes="128x128"
       href="/android-chrome-128x128.png"
-    />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fira+Code:wght@300..700&family=Geist+Mono:wght@100..900&family=Geist:wght@100..900&family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&family=IBM+Plex+Sans:ital,wght@0,100..700;1,100..700&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lora:ital,wght@0,400..700;1,400..700&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Outfit:wght@100..900&family=Oxanium:wght@200..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=Roboto:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&family=Space+Grotesk:wght@300..700&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-      rel="stylesheet"
     />
   </head>
   <body>
