--- a/client/index.html
+++ b/client/index.html
@@ -23,7 +23,11 @@
     <!-- Preconnect dla zasobów mapy, przyspiesza ich ładowanie -->
     <link rel="preconnect" href="https://a.basemaps.cartocdn.com" />
     <link rel="preconnect" href="https://b.basemaps.cartocdn.com" />
-    <link rel="preload" as="image" href="/12.avif" />
+    <link
+      rel="preload"
+      as="image"
+      href="https://wizjoner.netlify.app/12.avif"
+    />
     <meta
       name="description"
       content="Prześledź rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego ponadczasowe dziedzictwo i unikatową kolekcję Pawła Michalskiego."
