--- a/client/index.html
+++ b/client/index.html
@@ -39,11 +39,11 @@
       crossorigin
     />
 
-    <link
+    <!-- <link
       rel="preload"
       as="image"
       href="https://wizjoner.netlify.app/12.avif"
-    />
+    /> -->
 
     <!-- <link
       rel="preload"
