--- a/client/index.html
+++ b/client/index.html
@@ -52,7 +52,7 @@
       property="og:description"
       content="Prześledź rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego ponadczasowe dziedzictwo i unikatową kolekcję Pawła Michalskiego."
     />
-    <meta property="og:image" content="/15.png" />
+    <meta property="og:image" content="https://wizjoner.netlify.app/15.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
@@ -67,7 +67,7 @@
       name="twitter:description"
       content="Prześledź rewolucyjną historię Michaela Thoneta, pioniera gięcia drewna. Poznaj jego ponadczasowe dziedzictwo i unikatową kolekcję Pawła Michalskiego."
     />
-    <meta name="twitter:image" content="/14.png" />
+    <meta name="twitter:image" content="https://wizjoner.netlify.app/14.png" />
 
     <link rel="icon" href="/favicon.ico" sizes="any" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
